changed drawing logic to fit any screen

--- a/ISIS.html
+++ b/ISIS.html
@@ -7,7 +7,7 @@
 		<canvas id="myCanvas"></canvas><br/>
 
 		Click the "Move" button to choose where to move your ship, then click "Go" to move it there. Click the "Attack" button to choose an attack target.
-
+		<script type = "text/javascript" src = "jquery-1.8.0.min.js"></script>
 		<script type = "text/javascript" src = "Utils.js"></script>
 		<script type = "text/javascript" src = "sprite.js"></script>
 		<script type = "text/javascript" src = "spriteManager.js"></script>
