--- a/ISIS.html
+++ b/ISIS.html
@@ -5,8 +5,6 @@
 	</head>
 	<body>
 		<canvas id="myCanvas"></canvas><br/>
-
-		Click the "Move" button to choose where to move your ship, then click "Go" to move it there. Click the "Attack" button to choose an attack target.
 		<script type = "text/javascript" src = "jquery-1.8.0.min.js"></script>
 		<script type = "text/javascript" src = "Utils.js"></script>
 		<script type = "text/javascript" src = "sprite.js"></script>
@@ -14,6 +12,7 @@
 		<script type = "text/javascript" src = "game.js"></script>
 		<script type = "text/javascript" src = "unit.js"></script>
 		<script type = "text/javascript" src = "order.js"></script>
+		<script type = "text/javascript" src = "fleetView.js"></script>
 		<script type = "text/javascript" src = "main.js"></script>
 	</body>
 </html>
