--- a/ISIS.html
+++ b/ISIS.html
@@ -10,6 +10,8 @@
 		<script type = "text/javascript" src = "sprite.js"></script>
 		<script type = "text/javascript" src = "spriteManager.js"></script>
 		<script type = "text/javascript" src = "game.js"></script>
+		<script type = "text/javascript" src = "projectile.js"></script>
+		<script type = "text/javascript" src = "projectile_manager.js"></script>
 		<script type = "text/javascript" src = "weapon.js"></script>
 		<script type = "text/javascript" src = "unit.js"></script>
 		<script type = "text/javascript" src = "order.js"></script>
