--- a/ISIS.html
+++ b/ISIS.html
@@ -12,6 +12,8 @@
 		<script type = "text/javascript" src = "game.js"></script>
 		<script type = "text/javascript" src = "projectile.js"></script>
 		<script type = "text/javascript" src = "projectile_manager.js"></script>
+		<script type = "text/javascript" src = "particle.js"></script>
+		<script type = "text/javascript" src = "particle_manager.js"></script>
 		<script type = "text/javascript" src = "weapon.js"></script>
 		<script type = "text/javascript" src = "unit.js"></script>
 		<script type = "text/javascript" src = "order.js"></script>
