--- a/ISIS.html
+++ b/ISIS.html
@@ -8,6 +8,7 @@
 		<script type = "text/javascript" src = "jquery-1.8.0.min.js"></script>
 		<script type = "text/javascript" src = "Utils.js"></script>
 		<script type = "text/javascript" src = "sprite.js"></script>
+		<script type = "text/javascript" src = "manager.js"></script>
 		<script type = "text/javascript" src = "spriteManager.js"></script>
 		<script type = "text/javascript" src = "game.js"></script>
 		<script type = "text/javascript" src = "projectile.js"></script>
