changed references to new file names

--- a/ISIS.html
+++ b/ISIS.html
@@ -8,9 +8,9 @@
 		<script type = "text/javascript" src = "jquery-1.8.0.min.js"></script>
 		<script type = "text/javascript" src = "Utils.js"></script>
 		<script type = "text/javascript" src = "manager.js"></script>
-		<script type = "text/javascript" src = "spriteManager.js"></script>
-		<script type = "text/javascript" src = "projectile_manager.js"></script>
-		<script type = "text/javascript" src = "particle_manager.js"></script>
+		<script type = "text/javascript" src = "sprite.js"></script>
+		<script type = "text/javascript" src = "projectile.js"></script>
+		<script type = "text/javascript" src = "particle.js"></script>
 		<script type = "text/javascript" src = "weapon.js"></script>
 		<script type = "text/javascript" src = "unit.js"></script>
 		<script type = "text/javascript" src = "order.js"></script>
