--- a/ISIS.html
+++ b/ISIS.html
@@ -15,6 +15,7 @@
 		<script type = "text/javascript" src = "unit.js"></script>
 		<script type = "text/javascript" src = "order.js"></script>
 		<script type = "text/javascript" src = "fleetView.js"></script>
+		<script type = "type/javascript" src = "battleState.js"></script>
 		<script type = "text/javascript" src = "game.js"></script>
 		<script type = "text/javascript" src = "main.js"></script>
 	</body>
