--- a/ISIS.html
+++ b/ISIS.html
@@ -5,18 +5,18 @@
 	</head>
 	<body>
 		<canvas id="myCanvas"></canvas><br/>
-		<script type = "text/javascript" src = "jquery-1.8.0.min.js"></script>
-		<script type = "text/javascript" src = "Utils.js"></script>
-		<script type = "text/javascript" src = "manager.js"></script>
-		<script type = "text/javascript" src = "sprite.js"></script>
-		<script type = "text/javascript" src = "projectile.js"></script>
-		<script type = "text/javascript" src = "particle.js"></script>
-		<script type = "text/javascript" src = "weapon.js"></script>
-		<script type = "text/javascript" src = "unit.js"></script>
-		<script type = "text/javascript" src = "order.js"></script>
-		<script type = "text/javascript" src = "fleetView.js"></script>
-		<script type = "type/javascript" src = "battleState.js"></script>
-		<script type = "text/javascript" src = "game.js"></script>
-		<script type = "text/javascript" src = "main.js"></script>
+		<script src = "jquery-1.8.0.min.js"></script>
+		<script src = "Utils.js"></script>
+		<script src = "manager.js"></script>
+		<script src = "sprite.js"></script>
+		<script src = "projectile.js"></script>
+		<script src = "particle.js"></script>
+		<script src = "weapon.js"></script>
+		<script src = "unit.js"></script>
+		<script src = "order.js"></script>
+		<script src = "fleetView.js"></script>
+		<script src = "battleState.js"></script>
+		<script src = "game.js"></script>
+		<script src = "main.js"></script>
 	</body>
 </html>
