--- a/ISIS.html
+++ b/ISIS.html
@@ -16,6 +16,7 @@
 		<script src = "order.js"></script>
 		<script src = "fleetView.js"></script>
 		<script src = "battleState.js"></script>
+		<script src = "victoryState.js"></script>
 		<script src = "game.js"></script>
 		<script src = "main.js"></script>
 	</body>
