#12: Made state prototype

--- a/ISIS.html
+++ b/ISIS.html
@@ -15,6 +15,7 @@
 		<script src = "unit.js"></script>
 		<script src = "order.js"></script>
 		<script src = "fleetView.js"></script>
+		<script src = "gameState.js"></script>
 		<script src = "battleState.js"></script>
 		<script src = "victoryState.js"></script>
 		<script src = "game.js"></script>
