adjusted for new canvas structure

--- a/ISIS.html
+++ b/ISIS.html
@@ -4,7 +4,9 @@
 		<link rel="stylesheet" type="text/css" href = "ISIS.css"/>
 	</head>
 	<body>
-		<canvas id="myCanvas"></canvas><br/>
+		<div class="canvas" id="canvasWrapper">
+			<canvas class="canvas" id="canvas"></canvas>
+		</div>
 		<script src = "jquery-1.8.0.min.js"></script>
 		<script src = "Utils.js"></script>
 		<script src = "manager.js"></script>
