#50: Added laconic font and button sprite type

--- a/ISIS.html
+++ b/ISIS.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<title>Project ISIS</title>
-		<link rel="stylesheet" type="text/css" href = "ISIS.css"/>
+		<link rel="stylesheet" type="text/css" href = "css/laconic_font.css"/>
+		<link rel="stylesheet" type="text/css" href = "css/ISIS.css"/>
 	</head>
 	<body>
 		<div class="canvas" id="canvasWrapper">
