--- a/ISIS.html
+++ b/ISIS.html
@@ -9,6 +9,8 @@
 			<canvas class="canvas" id="canvas"></canvas>
 		</div>
 		<script src = "jquery-1.8.0.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js"></script>
+		<script src = "debug_vars.js"></script>
 		<script src = "Utils.js"></script>
 		<script src = "manager.js"></script>
 		<script src = "sprite.js"></script>
