#50: added clickable class

--- a/ISIS.html
+++ b/ISIS.html
@@ -21,6 +21,7 @@
 		<script src = "order.js"></script>
 		<script src = "fleet_view.js"></script>
 		<script src = "game_state.js"></script>
+		<script src = "clickable.js"></script>
 		<script src = "battle_state.js"></script>
 		<script src = "victory_state.js"></script>
 		<script src = "game.js"></script>
