--- a/ISIS.html
+++ b/ISIS.html
@@ -22,6 +22,7 @@
 		<script src = "fleet_view.js"></script>
 		<script src = "game_state.js"></script>
 		<script src = "clickable.js"></script>
+		<script src = "button.js"></script>
 		<script src = "battle_state.js"></script>
 		<script src = "victory_state.js"></script>
 		<script src = "game.js"></script>
