--- a/ISIS.html
+++ b/ISIS.html
@@ -25,6 +25,7 @@
 		<script src = "button.js"></script>
 		<script src = "battle_state.js"></script>
 		<script src = "victory_state.js"></script>
+		<script src = "defeat_state.js"></script>
 		<script src = "game.js"></script>
 		<script src = "main.js"></script>
 	</body>
