--- a/ISIS.html
+++ b/ISIS.html
@@ -16,6 +16,7 @@
 		<script src = "sprite.js"></script>
 		<script src = "projectile.js"></script>
 		<script src = "particle.js"></script>
+		<script src = "hardpoint.js"></script>
 		<script src = "weapon.js"></script>
 		<script src = "unit.js"></script>
 		<script src = "order.js"></script>
