#54: Added jasmine files and rearranged directory structures

--- a/ISIS.html
+++ b/ISIS.html
@@ -8,26 +8,25 @@
 		<div class="canvas" id="canvasWrapper">
 			<canvas class="canvas" id="canvas"></canvas>
 		</div>
-		<script src = "jquery-1.8.0.min.js"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js"></script>
-		<script src = "debug_vars.js"></script>
-		<script src = "Utils.js"></script>
-		<script src = "manager.js"></script>
-		<script src = "sprite.js"></script>
-		<script src = "projectile.js"></script>
-		<script src = "particle.js"></script>
-		<script src = "hardpoint.js"></script>
-		<script src = "weapon.js"></script>
-		<script src = "unit.js"></script>
-		<script src = "order.js"></script>
-		<script src = "fleet_view.js"></script>
-		<script src = "game_state.js"></script>
-		<script src = "clickable.js"></script>
-		<script src = "button.js"></script>
-		<script src = "battle_state.js"></script>
-		<script src = "victory_state.js"></script>
-		<script src = "defeat_state.js"></script>
-		<script src = "game.js"></script>
-		<script src = "main.js"></script>
+		<script src="lib/jquery-1.8.0/jquery-1.8.0.min.js"></script>"
+		<script src="src/debug_vars.js"></script>"
+		<script src="src/Utils.js"></script>"
+		<script src="src/manager.js"></script>"
+		<script src="src/sprite.js"></script>"
+		<script src="src/projectile.js"></script>"
+		<script src="src/particle.js"></script>"
+		<script src="src/hardpoint.js"></script>"
+		<script src="src/weapon.js"></script>"
+		<script src="src/unit.js"></script>"
+		<script src="src/order.js"></script>"
+		<script src="src/fleet_view.js"></script>"
+		<script src="src/game_state.js"></script>"
+		<script src="src/clickable.js"></script>"
+		<script src="src/button.js"></script>"
+		<script src="src/battle_state.js"></script>"
+		<script src="src/victory_state.js"></script>"
+		<script src="src/defeat_state.js"></script>"
+		<script src="src/game.js"></script>"
+		<script src="src/main.js"></script>"
 	</body>
 </html>
