#55: added some test specs for utils.js

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,7 +13,9 @@
   <script src="src/Utils.js"></script>
 
   <!-- include spec files here... -->
+  <script src="spec/specUtils.js"></script>
   <script src="spec/specVectorMath.js"></script>
+
 
   <script type="text/javascript">
     (function() {
