--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,50 +1,51 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+	"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>ISIS Jasmine Test suite</title>
+	<title>ISIS Jasmine Test suite</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.1/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
-  <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
-  <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+	<link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.1/jasmine_favicon.png">
+	<link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
+	<script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
+	<script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
-  <!-- include source files here... -->
-  <script src="src/Utils.js"></script>
+	<!-- include source files here... -->
+	<script src="src/Utils.js"></script>
+	<script src="src/vector.js"></script>
 
-  <!-- include spec files here... -->
-  <script src="spec/specUtils.js"></script>
-  <script src="spec/specVectorMath.js"></script>
+	<!-- include spec files here... -->
+	<script src="spec/specUtils.js"></script>
+	<script src="spec/specVectorMath.js"></script>
+	<script src="spec/specVector.js"></script>
 
+	<script type="text/javascript">
+		(function() {
+			var jasmineEnv = jasmine.getEnv();
+			jasmineEnv.updateInterval = 1000;
 
-  <script type="text/javascript">
-    (function() {
-      var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
+			var htmlReporter = new jasmine.HtmlReporter();
 
-      var htmlReporter = new jasmine.HtmlReporter();
+			jasmineEnv.addReporter(htmlReporter);
 
-      jasmineEnv.addReporter(htmlReporter);
+			jasmineEnv.specFilter = function(spec) {
+				return htmlReporter.specFilter(spec);
+			};
 
-      jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-      };
+			var currentWindowOnload = window.onload;
 
-      var currentWindowOnload = window.onload;
+			window.onload = function() {
+				if (currentWindowOnload) {
+					currentWindowOnload();
+				}
+				execJasmine();
+			};
 
-      window.onload = function() {
-        if (currentWindowOnload) {
-          currentWindowOnload();
-        }
-        execJasmine();
-      };
+			function execJasmine() {
+				jasmineEnv.execute();
+			}
 
-      function execJasmine() {
-        jasmineEnv.execute();
-      }
-
-    })();
-  </script>
+		})();
+	</script>
 
 </head>
 
