#55: Added on-the-fly magnitude calculation

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,7 +16,7 @@
 	<!-- include spec files here... -->
 	<script src="spec/specUtils.js"></script>
 	<script src="spec/specVectorMath.js"></script>
-	<script src="spec/specVector.js"></script>
+	<script src="spec/vector.js"></script>
 
 	<script type="text/javascript">
 		(function() {
